--- a/index.html
+++ b/index.html
@@ -142,19 +142,38 @@
     <div class="container">
       <p class="subtitulo">Clientes Regulares</p>
       <div class="flex-list">
+
         <div class="client-container">
           <svg class="client-logo">
-              <use xlink:href="/images/icons.svg#logo"></use>
+              <use href="/images/icons.svg#logo"></use>
           </svg>
         </div>
-   
-      <div class="flex-list">
         <div class="client-container">
           <svg class="client-logo">
             <use xlink:href="/images/icons.svg#logo1"></use>
         </svg>
+       </div>
+        <div class="client-container">
+          <svg class="client-logo">
+            <use xlink:href="/images/icons.svg#logo2"></use>
+        </svg>
       </div>
-     </div>
+        <div class="client-container">
+          <svg class="client-logo">
+            <use xlink:href="/images/icons.svg#logo3"></use>
+        </svg>
+      </div>
+        <div class="client-container">
+          <svg class="client-logo">
+            <use xlink:href="/images/icons.svg#logo4"></use>
+        </svg>
+      </div>
+        <div class="client-container">
+          <svg class="client-logo">
+            <use xlink:href="/images/icons.svg#logo5"></use>
+        </svg>
+      </div>
+    </div>
   
   </div>
   </section>
