--- a/index.html
+++ b/index.html
@@ -145,32 +145,32 @@
 
         <div class="client-container">
           <svg class="client-logo">
-              <use href="/images/icons.svg#logo"></use>
+              <use xlink:href=*/images/icons.svg#logo></use>
           </svg>
         </div>
         <div class="client-container">
           <svg class="client-logo">
-            <use xlink:href="/images/icons.svg#logo1"></use>
+            <use xlink:href=*/images/icons.svg#logo1></use>
         </svg>
        </div>
         <div class="client-container">
           <svg class="client-logo">
-            <use xlink:href="/images/icons.svg#logo2"></use>
+            <use xlink:href=*/images/icons.svg#logo2></use>
         </svg>
       </div>
         <div class="client-container">
           <svg class="client-logo">
-            <use xlink:href="/images/icons.svg#logo3"></use>
+            <use xlink:href=*/images/icons.svg#logo3></use>
         </svg>
       </div>
         <div class="client-container">
           <svg class="client-logo">
-            <use xlink:href="/images/icons.svg#logo4"></use>
+            <use xlink:href=*/images/icons.svg#logo4></use>
         </svg>
       </div>
         <div class="client-container">
           <svg class="client-logo">
-            <use xlink:href="/images/icons.svg#logo5"></use>
+            <use xlink:href=*/images/icons.svg#logo></use>
         </svg>
       </div>
     </div>
