--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://unpkg.com/modern-normalize@1.1.0/modern-normalize.css">
     <link rel="stylesheet" href="css/styles.css">
-    <!-- <link href="css/styles.css" rel="stylesheet" type="text/css"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> -->
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@500&display=swap");
+  </style>
+  
   </head>
   <body>
     <header>
@@ -138,45 +142,46 @@
       </div>
   </section>
   
-  <section>
+  <!-- <section> -->
     <div class="container">
       <p class="subtitulo">Clientes Regulares</p>
       <div class="flex-list">
 
         <div class="client-container">
           <svg class="client-logo">
-              <use xlink:href=*/images/icons.svg#logo></use>
+              <!-- <use xlink:href=./images/icons.svg#logo></use> -->
+              <use href="/images/icons.svg#icon-Logo"></use>
           </svg>
         </div>
         <div class="client-container">
           <svg class="client-logo">
-            <use xlink:href=*/images/icons.svg#logo1></use>
+            <use href="/images/icons.svg#icon-Logo1"></use>
         </svg>
        </div>
         <div class="client-container">
           <svg class="client-logo">
-            <use xlink:href=*/images/icons.svg#logo2></use>
+            <use href="/images/icons.svg#icon-Logo2"></use>
         </svg>
       </div>
         <div class="client-container">
           <svg class="client-logo">
-            <use xlink:href=*/images/icons.svg#logo3></use>
+            <use href="/images/icons.svg#icon-Logo3"></use>
         </svg>
       </div>
         <div class="client-container">
           <svg class="client-logo">
-            <use xlink:href=*/images/icons.svg#logo4></use>
+            <use href="/images/icons.svg#icon-Logo4"></use>
         </svg>
       </div>
         <div class="client-container">
           <svg class="client-logo">
-            <use xlink:href=*/images/icons.svg#logo></use>
+            <use href="/images/icons.svg#icon-Logo5"></use>
         </svg>
       </div>
     </div>
   
   </div>
-  </section>
+  <!-- </section> -->
 
 </main>
     
