--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
             <a class="link-contact" href="mailto:info@decstudio.com"> 
               <svg class="nav-icon">
-                <use href="/images/icons.svg#icon-sobre"></use>
+                <use href="./images/icons.svg#icon-sobre"></use>
               </svg>
               info@decstudio.com
             </a>
 
             <a class="link-contact" href="tel:+525555296000" target="_blank">
               <svg class="nav-icon">
-                <use href="/images/icons.svg#icon-telefonointeligente"></use>
+                <use href="./images/icons.svg#icon-telefonointeligente"></use>
               </svg>
               +52 55 5529 6000 
             </a>
@@ -53,17 +53,16 @@
         <!-- <div class="cont1-flex"> -->
           <h2>SOLUCIONES EFICACES PARA <br>SU NEGOCIO</h2>
           <button type="button">Solicite nuestro servicio</button>
-        <!-- </div> -->
+  
       </div>
       </section>
-
     <section> 
     <div class="container">
           <ul class="cont2-flex">
           <li>
             <div class="servicios-container">
               <svg class="servicios-icon">
-                <use href="/images/icons.svg#icon-beneficio1"></use>
+                <use href= "./images/icons.svg#icon-beneficio1"></use>
             </svg>
           </div>
              <p class="menu">ATENCION A LOS DETALLES</p>
@@ -75,7 +74,7 @@
           <li>
             <div class="servicios-container">
               <svg class="servicios-icon">
-                <use href="/images/icons.svg#icon-beneficio2"></use>
+                <use href="./images/icons.svg#icon-beneficio2"></use>
             </svg>
           </div>
             <p class="menu">PUNTUALIDAD</p>
@@ -88,7 +87,7 @@
           <li>
             <div class="servicios-container">
               <svg class="servicios-icon">
-                <use href="/images/icons.svg#icon-beneficio3"></use>
+                <use href="./images/icons.svg#icon-beneficio3"></use>
             </svg>
           </div>
             <p class="menu">PLANIFICACIÓN</p>
@@ -100,7 +99,7 @@
           <li>
             <div class="servicios-container">
               <svg class="servicios-icon">
-                <use href="/images/icons.svg#icon-beneficio4"></use>
+                <use href="./images/icons.svg#icon-beneficio4"></use>
             </svg>
           </div>
             <p class="menu">TECNOLOGÍA MODERNA</p>
