--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
             <a class="link-contact" href="mailto:info@decstudio.com"> 
               <svg class="nav-icon">
-                <use href="/.images/icons.svg#icon-sobre"></use>
+                <use href="./images/icons.svg#icon-sobre"></use>
               </svg>
               info@decstudio.com
             </a>
 
             <a class="link-contact" href="tel:+525555296000" target="_blank">
               <svg class="nav-icon">
-                <use href="/.images/icons.svg#icon-telefonointeligente"></use>
+                <use href="./images/icons.svg#icon-telefonointeligente"></use>
               </svg>
               +52 55 5529 6000 
             </a>
@@ -64,7 +64,7 @@
           <li>
             <div class="servicios-container">
               <svg class="servicios-icon">
-                <use href= "/images/icons.svg#icon-beneficio1"></use>
+                <use href= "./images/icons.svg#icon-beneficio1"></use>
             </svg>
            
           </div>    
@@ -77,7 +77,7 @@
           <li>
             <div class="servicios-container">
               <svg class="servicios-icon">
-                <use href="/.images/icons.svg#icon-beneficio2"></use>
+                <use href="./images/icons.svg#icon-beneficio2"></use>
             </svg>
           </div>
             <p class="menu">PUNTUALIDAD</p>
@@ -90,7 +90,7 @@
           <li>
             <div class="servicios-container">
               <svg class="servicios-icon">
-                <use href="/.images/icons.svg#icon-beneficio3"
+                <use href="./images/icons.svg#icon-beneficio3"
             </svg>
           </div>
             <p class="menu">PLANIFICACIÓN</p>
@@ -102,7 +102,7 @@
           <li>
             <div class="servicios-container">
               <svg class="servicios-icon">
-                <use href="/.images/icons.svg#icon-beneficio4"></use>
+                <use href="./images/icons.svg#icon-beneficio4"></use>
             </svg>
           </div>
             <p class="menu">TECNOLOGÍA MODERNA</p>
@@ -139,22 +139,22 @@
                     <div class="flex-list1 card">
                       <div class="social-link-container">
                           <svg class="social-link-icon">
-                            <use href="/.images/icons.svg#icon-instagram"></use>
+                            <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </div>
                       <div class="social-link-container">
                         <svg class="social-link-icon">
-                          <use href="/.images/icons.svg#icon-twitter"></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </div>
                     <div class="social-link-container">
                       <svg class="social-link-icon">
-                        <use href="/.images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </div>
                     <div class="social-link-container">
                       <svg class="social-link-icon">
-                        <use href="/.images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </div>                  
                    </div>
@@ -169,22 +169,22 @@
                     <div class="flex-list1 card">
                       <div class="social-link-container">
                           <svg class="social-link-icon">
-                            <use href="/.images/icons.svg#icon-instagram"></use>
+                            <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </div>
                       <div class="social-link-container">
                         <svg class="social-link-icon">
-                          <use href="/.images/icons.svg#icon-twitter"></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </div>
                     <div class="social-link-container">
                       <svg class="social-link-icon">
-                        <use href="/.images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </div>
                     <div class="social-link-container">
                       <svg class="social-link-icon">
-                        <use href="/.images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </div>                  
                    </div>
@@ -200,22 +200,22 @@
                     <div class="flex-list1 card">
                       <div class="social-link-container">
                           <svg class="social-link-icon">
-                            <use href="/.images/icons.svg#icon-instagram"></use>
+                            <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </div>
                       <div class="social-link-container">
                         <svg class="social-link-icon">
-                          <use href="/.images/icons.svg#icon-twitter"></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </div>
                     <div class="social-link-container">
                       <svg class="social-link-icon">
-                        <use href="/.images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </div>
                     <div class="social-link-container">
                       <svg class="social-link-icon">
-                        <use href="/.images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </div>                  
                    </div>
@@ -231,22 +231,22 @@
                     <div class="flex-list1 card">
                       <div class="social-link-container">
                           <svg class="social-link-icon">
-                            <use href="/.images/icons.svg#icon-instagram"></use>
+                            <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </div>
                       <div class="social-link-container">
                         <svg class="social-link-icon">
-                          <use href="/.images/icons.svg#icon-twitter"></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </div>
                     <div class="social-link-container">
                       <svg class="social-link-icon">
-                        <use href="/.images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </div>
                     <div class="social-link-container">
                       <svg class="social-link-icon">
-                        <use href="/.images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </div>                  
                    </div> 
@@ -265,32 +265,32 @@
         <div class="client-container">
           <svg class="client-logo">
               <!-- <use xlink:href=./images/icons.svg#logo></use> -->
-              <use href="/.images/icons.svg#icon-Logo"></use>
+              <use href="./images/icons.svg#icon-Logo"></use>
           </svg>
         </div>
         <div class="client-container">
           <svg class="client-logo">
-            <use href="/.images/icons.svg#icon-Logo1"></use>
+            <use href="./images/icons.svg#icon-Logo1"></use>
         </svg>
        </div>
         <div class="client-container">
           <svg class="client-logo">
-            <use href="/.images/icons.svg#icon-Logo2"></use>
+            <use href="./images/icons.svg#icon-Logo2"></use>
         </svg>
       </div>
         <div class="client-container">
           <svg class="client-logo">
-            <use href="/.images/icons.svg#icon-Logo3"></use>
+            <use href="./images/icons.svg#icon-Logo3"></use>
         </svg>
       </div>
         <div class="client-container">
           <svg class="client-logo">
-            <use href="/.images/icons.svg#icon-Logo4"></use>
+            <use href="./images/icons.svg#icon-Logo4"></use>
         </svg>
       </div>
         <div class="client-container">
           <svg class="client-logo">
-            <use href="/.images/icons.svg#icon-Logo5"></use>
+            <use href="./images/icons.svg#icon-Logo5"></use>
         </svg>
       </div>
     </div>
@@ -315,22 +315,22 @@
         <div class="fila-icons-piepagina">
           <div class="iconfooter-container">
             <svg class="icon-footer">
-              <use href="/.images/icons.svg#icon-instagram"></use>
+              <use href="./images/icons.svg#icon-instagram"></use>
              </svg>
           </div>
           <div class="iconfooter-container">
              <svg class="icon-footer">
-             <use href="/.images/icons.svg#icon-twitter"></use>
+             <use href="./images/icons.svg#icon-twitter"></use>
              </svg>
          </div>
             <div class="iconfooter-container">
               <svg class="icon-footer">
-              <use href="/.images/icons.svg#icon-facebook"></use>
+              <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </div>
             <div class="iconfooter-container">
               <svg class="icon-footer">
-              <use href="/.images/icons.svg#icon-twitter"></use>
+              <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </div>
         </div>
