--- a/portfolio.html
+++ b/portfolio.html
@@ -31,14 +31,14 @@
 
             <a class="link-contact" href="mailto:info@decstudio.com"> 
               <svg class="nav-icon">
-                <use href="/images/icons.svg#icon-sobre"></use>
+                <use href="./images/icons.svg#icon-sobre"></use>
               </svg>
               info@decstudio.com
             </a>
 
             <a class="link-contact" href="tel:+525555296000" target="_blank">
               <svg class="nav-icon">
-                <use href="/images/icons.svg#icon-telefonointeligente"></use>
+                <use href="./images/icons.svg#icon-telefonointeligente"></use>
               </svg>
               +52 55 5529 6000 
             </a>
@@ -133,22 +133,22 @@
         <div class="fila-icons-piepagina">
           <div class="iconfooter-container">
             <svg class="icon-footer">
-              <use href="/images/icons.svg#icon-instagram"></use>
+              <use href="./images/icons.svg#icon-instagram"></use>
              </svg>
           </div>
           <div class="iconfooter-container">
              <svg class="icon-footer">
-             <use href="/images/icons.svg#icon-twitter"></use>
+             <use href="./images/icons.svg#icon-twitter"></use>
              </svg>
          </div>
             <div class="iconfooter-container">
               <svg class="icon-footer">
-              <use href="/images/icons.svg#icon-facebook"></use>
+              <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </div>
             <div class="iconfooter-container">
               <svg class="icon-footer">
-              <use href="/images/icons.svg#icon-linkedin"></use>
+              <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </div>
         </div>
