--- a/portfolio.html
+++ b/portfolio.html
@@ -9,26 +9,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://unpkg.com/modern-normalize@1.1.0/modern-normalize.css">
     <link rel="stylesheet" href="css/styles.css">
-    <!-- <link href="css/styles.css" rel="stylesheet" type="text/css"> -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-  </style>
+      .title {
+        font-family: 'Raleway', sans-serif;
+        font-family: 'Roboto', sans-serif;
+      }
+    </style>
 
   </head>
   <body>
-    <header>
-      <div class="container">
-        <div class="container-header">
-
+    <header class="container-header">
+      <div class="container-header1">
+        <div style="display: flex; align-items: center;">
           <a class="link-log" href="http://www.WebStudio" target="_blank">WebStudio</a>
-          <!-- <nav class="nav-style"> -->
-            <ul class="menu-flex">
-              <li><a class="link-menu" href="index.html" target="_blank">Estudio </a></li>
-              <li><a class="link-menu" href="portfolio.html" target="_blank">Portafolio</a></li>
-              <li><a class="link-menu" href="http://www.Contacto" target="_blank">Contactos</a>
-            </ul>
-            <div class="container-header">
+
+          <nav style="margin-left: 93px;">
+              <ul class="menu-flex">
+                <li><a class="link-menu" href="index.html" target="_blank">Estudio </a></li>
+                <li><a class="link-menu" href="portfolio.html" target="_blank">portafolio</a></li>
+                <li><a class="link-menu" href="http://www.Contacto" target="_blank">Contacto</a>
+              </ul>
+          </nav>
+
+        </div>
+            <div class="container-header2">
             <a class="link-contact" href="mailto:info@decstudio.com">
               <svg class="nav-icon">
                 <use href="./images/icons.svg#icon-sobre"></use>
@@ -42,10 +47,9 @@
               </svg>
               +52 55 5529 6000
             </a>
-          </div>
 
+          </div>
         </div>
-      </div>
     </header>
 
 <main>
