--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
     <div class="container">
             <h2 class="subtitulo">A qué nos dedicamos</h2>
               <div class="cont35-flex">
-              <img src="images/design1.jpg" alt="planecion" width="350.16"></li>
-              <img src="images/design2.jpg" alt="responsive1" width="350.16"></li>
-              <img src="images/design3.jpg" alt="images" width="350.16"></li>
+              <img src="images/design1.jpg" alt="planecion" width="370"></li>
+              <img src="images/design2.jpg" alt="responsive1" width="370"></li>
+              <img src="images/design3.jpg" alt="images" width="370"></li>
               </div>
     </div>
   </section>
@@ -136,10 +136,10 @@
     <div class="container">
         <h2 class="subtitulo">Nuestro Equipo</h2>
         <ul class="cont3-flex">
-            <ul>
+            <ul style="padding :0px;">
               <li>
                   <div class="fondo-ne">
-                     <img src="images/professional1.jpg" alt="professional1" width="240">
+                     <img src="images/professional1.jpg" alt="professional1" width="270">
                      <h4>Andrés Cubo</h4>
                      <h5>Diseñador de Productos</h5>
                     <div class="flex-list1 card">
@@ -169,7 +169,7 @@
             <ul>
               <li>
                  <div  class="fondo-ne">
-                    <img src="images/professional2.jpg" alt="professional2" width="240">
+                    <img src="images/professional2.jpg" alt="professional2" width="270">
                     <h4>Carla Palacioso</h4>
                     <h5>Desarrolladora FrontEnd</h5>
                     <div class="flex-list1 card">
@@ -200,7 +200,7 @@
             <ul>
               <li>
                 <div class="fondo-ne">
-                    <img src="images/professional3.jpg" alt="professional3" width="240">
+                    <img src="images/professional3.jpg" alt="professional3" width="270">
                     <h4>Mario Dorad</h4>
                     <h5>Marketing</h5>
                     <div class="flex-list1 card">
@@ -231,7 +231,7 @@
             <ul>
               <li>
                 <div class="fondo-ne">
-                    <img src="images/professional4.jpg" alt="professional4" width="240">
+                    <img src="images/professional4.jpg" alt="professional4" width="270">
                     <h4>Pablo Mijangos</h4>
                     <h5>Diseñador IU</h5>
                     <div class="flex-list1 card">
@@ -309,7 +309,7 @@
 <footer>
   <div class="container">
   <address>
-    <ul>
+    <ul style="padding :0px;">
        <li><p class="foot1">WebStudio</p></li>
        <li><p class="foot2">Calz. Ticomán 500, Ciudad de México, CDMX, México</p></li>
        <li><a class="foot3" href="info@example.com">+info@example.com</a></li>
