--- a/portfolio.html
+++ b/portfolio.html
@@ -67,8 +67,9 @@
 
 <section class="cont33-flex">
   <div class="container">
-      <ul>
-         <ul class="matriz-flex">
+      <ul style="padding-left :0px;">
+
+         <ul class="matriz-flex" style="padding-left :0px;">
                   <li class="fondo-matriz"><img src="images/tecnoduck.jpg" alt="Tecnoduck" width="350">
                   <div><a class="menu" href="tecnoduck.html" target="_blank">Tecnoduck</a><br>
                   <a class="submenu"  href="sitioweb.html" target="_blank">Sitio web</a></div>
@@ -85,7 +86,9 @@
                 <a class="submenu" href="aplicaciones.html" target="_blank">Aplicaciones</a></div>
                </li>
          </ul>
-          <ul class="matriz-flex">
+          <!-- <ul class="matriz-flex"> -->
+            <ul class="matriz-flex" style="padding-left :0px;">
+
                <li class="fondo-matriz"><img src="images/audio.jpg" alt="Proyecto Prime" width="350">
                 <div><a class="menu" href="proyectoprime.html" target="_blank">Proyecto Prime</a><br>
                <a class="submenu" href="Marketing.html" target="_blank">Marketing</a></div>
@@ -101,8 +104,8 @@
               <a class="submenu" href="website.html" target="_blank">Sitio web</a></div>
               </li>
           </ul>
-          <ul class="matriz-flex">
-                <li class="fondo-matriz"><img src="images/limited.jpg" alt="Edición Limitada" width="350">
+          <ul class="matriz-flex" style="padding-left :0px;">
+            <li class="fondo-matriz"><img src="images/limited.jpg" alt="Edición Limitada" width="350">
                   <div> <a class="menu" href="ediclimitada.html" target="_blank">Edición Límitada</a><br>
                 <a class="submenu" href="diseño.html" target="_blank">Diseño</a></div>
                 </li>
@@ -126,7 +129,8 @@
 <footer>
   <div class="container">
   <address>
-    <ul>
+    <ul style="padding-left :0px;">
+
        <li><p class="foot1">WebStudio</p></li>
        <li><p class="foot2">Calz. Ticomán 500, Ciudad de México, CDMX, México</p></li>
        <li><a class="foot3" href="info@example.com">+info@example.com</a></li>
