--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <ul style="padding :0px;">
               <li>
                   <div class="fondo-ne">
-                     <img src="images/professional1.jpg" alt="professional1" width="270">
+                     <img src="images/professional1.jpg" alt="professional1" width="270" height="260px">
                      <h4>Andrés Cubo</h4>
                      <h5>Diseñador de Productos</h5>
                     <div class="flex-list1 card">
